# relay

./: .env.example  .gitignore  BETA.md  Dockerfile.prod  LICENSE  Makefile  QUICKSTART.md  README.md  SPEC.md  docker-compose.yml  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
adapters/claude/: SKILL.md  hooks.json
adapters/claude/.claude-plugin/: plugin.json
adapters/claude/commands/: capture.md  fetch.md  relay-capture.md  review.md  search.md  status.md  upload.md
adapters/claude/hooks/: post-tool-use.sh
central_api/: Dockerfile  auth.py  config.py  content_scanner.py  db.py  embedding.py  main.py  masking.py  models.py  ranking.py  schemas.py
central_api/routers/: auth_router.py  reviews.py  skills.py
central_api/sql/: 001_init.sql  002_reviews_trigger.sql
central_api/tests/: conftest.py  test_api_reviews.py  test_api_search.py  test_api_skills.py  test_auth.py  test_config.py  test_content_scanner.py  test_db_conftest.py  test_embedding.py  test_masking.py  test_models.py  test_ranking.py  test_schemas.py
dashboard/: .gitignore  README.md  package-lock.json  package.json
dashboard/app/: fonts.ts  globals.css  layout.tsx  not-found.tsx  page.tsx
dashboard/app/skills/: page.tsx
dashboard/app/skills/[id]/: page.tsx
dashboard/components/: attempts-timeline.tsx  confidence-bar.tsx  search-bar.tsx  skill-card.tsx
dashboard/lib/: api.ts
deploy/: 00-preflight.sh  01-rds-create.sh  02-rds-init.sh  03-secrets-create.sh  04-ecr-create.sh  05-image-push.sh  06-iam-create.sh  07-apprunner-create.sh  08-smoke.sh  09-reviews-smoke.sh  99-teardown.sh  README.md
docs/: BETA_INVITE_TEMPLATE.md
docs/superpowers/plans/: 2026-04-21-week1-local-mcp.md  2026-04-21-week2-central-api.md  2026-04-21-week2b-aws-deploy.md  2026-04-21-week2c-local-embedding.md  2026-04-22-week3-reviews-auto-capture.md  2026-04-22-week4-polish-beta.md
docs/verification/: aws-deploy-smoke.md  day0-claude-code-skills.md  v0.3.0-plugin-only-smoke.md  week4-beta-smoke.md
local_mcp/: config.py  credentials.py  drift.py  fs.py  server.py  types.py
local_mcp/tools/: capture.py  fetch.py  list_local.py  review.py  upload.py
scripts/: metrics.py  reset-local.sh
seed/: seed_commons.py
tests/: conftest.py  test_capture.py  test_drift.py  test_e2e_upload_fetch.py  test_fetch.py  test_fs.py  test_list_local.py  test_review.py  test_server.py  test_types.py  test_upload.py
