[project]
name = "relay-mcp"
version = "0.1.0"
description = "Local MCP server for Relay — agent skill sharing platform"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
relay-mcp = "local_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["local_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
